Página de Clases

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -64,11 +64,11 @@
                   Menú
                 </a>
                 <ul class="dropdown-menu right ps-2" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="pages/classes.html">Clases</a></li>
-                  <li><a class="dropdown-item" href="pages/trainers.html">Nuestro Equipo</a></li>
-                  <li><a class="dropdown-item" href="pages/pricing.html">Planes y Precios</a></li>
-                  <li><a class="dropdown-item" href="pages/contact.html">Contacto</a></li>
-                  <li><a class="dropdown-item" href="pages/blog.html">Blog de Fitness</a></li>
+                  <li><a class="dropdown-item" href="classes.html">Clases</a></li>
+                  <li><a class="dropdown-item" href="trainers.html">Nuestro Equipo</a></li>
+                  <li><a class="dropdown-item" href="pricing.html">Planes y Precios</a></li>
+                  <li><a class="dropdown-item" href="contact.html">Contacto</a></li>
+                  <li><a class="dropdown-item" href="blog.html">Blog de Fitness</a></li>
                 </ul>
               </li>
             </ul>
@@ -441,9 +441,9 @@
       </div>
     </footer>
 
-    <script src="js/jquery-3.7.1.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/footer.js"></script>
+    <script src="../js/jquery-3.7.1.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="../js/footer.js"></script>
     <script src="../js/blog.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js" crossorigin="anonymous"
       referrerpolicy="no-referrer"></script>
