--- a/pages/trainers.html
+++ b/pages/trainers.html
@@ -78,126 +78,123 @@
     </header>
 
     <main class="trainers-page">
-      <section class="trainers-section">
-        <h1 class="section-title">NUESTROS ENTRENADORES</h1>
-
-        <div class="trainers-grid">
-          <div class="trainer-card" tabindex="0">
-            <div class="trainer-card-inner">
-              <div class="trainer-card-front">
-                <img src="../assets/images/trainers/trainer1.jpeg" alt="María González">
-                <h3>María González</h3>
-                <p>Entrenadora de Crossfit</p>
-              </div>
-              <div class="trainer-card-back">
-                <h3>María González</h3>
-                <div class="trainer-skills">
-                  <div class="skill">
+      <section class="trainers-section container-fluid">
+        <h1 class="section-title text-center display-4 display-md-3 display-lg-1 fs-1 pb-4">NUESTROS ENTRENADORES</h1>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-4justify-content-center">
+          <div class="col py-3">
+            <div class="trainer-card" tabindex="0">
+              <div class="trainer-card-inner">
+                <div class="trainer-card-front">
+                  <img src="../assets/images/trainers/trainer1.jpeg" alt="María González">
+                  <h3>María González</h3>
+                  <p>Entrenadora de Crossfit</p>
+                </div>
+                <div class="trainer-card-back">
+                  <h3>María González</h3>
+                  <div class="trainer-skills">
                     <span>Fuerza</span>
-                    <div class="skill-bar">
-                      <div class="skill-level"></div>
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+                        data-skill-level="85" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                  </div>
-                  <div class="skill">
                     <span>Resistencia</span>
-                    <div class="skill-bar">
-                      <div class="skill-level"></div>
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+                        data-skill-level="75" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
+                  <div class="trainer-rating">
+                    <input type="radio" name="rating1" value="1" id="rating1-1">
+                    <label for="rating1-1"></label>
+                    <input type="radio" name="rating1" value="2" id="rating1-2">
+                    <label for="rating1-2"></label>
+                    <input type="radio" name="rating1" value="3" id="rating1-3">
+                    <label for="rating1-3"></label>
+                    <input type="radio" name="rating1" value="4" id="rating1-4">
+                    <label for="rating1-4"></label>
+                    <input type="radio" name="rating1" value="5" id="rating1-5">
+                    <label for="rating1-5"></label>
+                  </div>
+                  <p>Especialista en entrenamiento de alta intensidad.</p>
                 </div>
-                <div class="trainer-rating">
-                  <input type="radio" name="rating1" value="5" id="rating1-5">
-                  <label for="rating1-5"></label>
-                  <input type="radio" name="rating1" value="4" id="rating1-4">
-                  <label for="rating1-4"></label>
-                  <input type="radio" name="rating1" value="3" id="rating1-3">
-                  <label for="rating1-3"></label>
-                  <input type="radio" name="rating1" value="2" id="rating1-2">
-                  <label for="rating1-2"></label>
-                  <input type="radio" name="rating1" value="1" id="rating1-1">
-                  <label for="rating1-1"></label>
-                </div>
-                <p>Especialista en entrenamiento de alta intensidad.</p>
               </div>
             </div>
           </div>
-
-          <div class="trainer-card" tabindex="0">
-            <div class="trainer-card-inner">
-              <div class="trainer-card-front">
-                <img src="../assets/images/trainers/trainer2.jpg" alt="Carlos Rodríguez">
-                <h3>Carlos Rodríguez</h3>
-                <p>Entrenador de Musculación</p>
-              </div>
-              <div class="trainer-card-back">
-                <h3>Carlos Rodríguez</h3>
-                <div class="trainer-skills">
-                  <div class="skill">
+          <div class="col py-3">
+            <div class="trainer-card" tabindex="0">
+              <div class="trainer-card-inner">
+                <div class="trainer-card-front">
+                  <img src="../assets/images/trainers/trainer2.jpg" alt="Carlos Rodríguez">
+                  <h3>Carlos Rodríguez</h3>
+                  <p>Entrenador de Musculación</p>
+                </div>
+                <div class="trainer-card-back">
+                  <h3>Carlos Rodríguez</h3>
+                  <div class="trainer-skills">
                     <span>Hipertrofia</span>
-                    <div class="skill-bar">
-                      <div class="skill-level"></div>
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+                        data-skill-level="94" aria-valuenow="94" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                  </div>
-                  <div class="skill">
                     <span>Nutrición</span>
-                    <div class="skill-bar">
-                      <div class="skill-level"></div>
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+                        data-skill-level="85" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
+                  <div class="trainer-rating">
+                    <input type="radio" name="rating2" value="1" id="rating2-1">
+                    <label for="rating2-1"></label>
+                    <input type="radio" name="rating2" value="2" id="rating2-2">
+                    <label for="rating2-2"></label>
+                    <input type="radio" name="rating2" value="3" id="rating2-3">
+                    <label for="rating2-3"></label>
+                    <input type="radio" name="rating2" value="4" id="rating2-4">
+                    <label for="rating2-4"></label>
+                    <input type="radio" name="rating2" value="5" id="rating2-5">
+                    <label for="rating2-5"></label>
+                  </div>
+                  <p>Experto en desarrollo muscular y planes personalizados.</p>
                 </div>
-                <div class="trainer-rating">
-                  <input type="radio" name="rating2" value="5" id="rating2-5">
-                  <label for="rating2-5"></label>
-                  <input type="radio" name="rating2" value="4" id="rating2-4">
-                  <label for="rating2-4"></label>
-                  <input type="radio" name="rating2" value="3" id="rating2-3">
-                  <label for="rating2-3"></label>
-                  <input type="radio" name="rating2" value="2" id="rating2-2">
-                  <label for="rating2-2"></label>
-                  <input type="radio" name="rating2" value="1" id="rating2-1">
-                  <label for="rating2-1"></label>
-                </div>
-                <p>Experto en desarrollo muscular y planes personalizados.</p>
               </div>
             </div>
           </div>
-
-          <div class="trainer-card" tabindex="0">
-            <div class="trainer-card-inner">
-              <div class="trainer-card-front">
-                <img src="../assets/images/trainers/trainer3.jpg" alt="Laura Sánchez">
-                <h3>Laura Sánchez</h3>
-                <p>Instructora de Yoga</p>
-              </div>
-              <div class="trainer-card-back">
-                <h3>Laura Sánchez</h3>
-                <div class="trainer-skills">
-                  <div class="skill">
+          <div class="col py-3">
+            <div class="trainer-card" tabindex="0">
+              <div class="trainer-card-inner">
+                <div class="trainer-card-front">
+                  <img src="../assets/images/trainers/trainer3.jpg" alt="Laura Sánchez">
+                  <h3>Laura Sánchez</h3>
+                  <p>Instructora de Yoga</p>
+                </div>
+                <div class="trainer-card-back">
+                  <h3>Laura Sánchez</h3>
+                  <div class="trainer-skills">
                     <span>Flexibilidad</span>
-                    <div class="skill-bar">
-                      <div class="skill-level"></div>
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+                        data-skill-level="82" aria-valuenow="82" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                  </div>
-                  <div class="skill">
                     <span>Meditación</span>
-                    <div class="skill-bar">
-                      <div class="skill-level"></div>
+                    <div class="progress">
+                      <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+                        data-skill-level="92" aria-valuenow="92" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
+                  <div class="trainer-rating">
+                    <input type="radio" name="rating3" value="1" id="rating3-1">
+                    <label for="rating3-1"></label>
+                    <input type="radio" name="rating3" value="2" id="rating3-2">
+                    <label for="rating3-2"></label>
+                    <input type="radio" name="rating3" value="3" id="rating3-3">
+                    <label for="rating3-3"></label>
+                    <input type="radio" name="rating3" value="4" id="rating3-4">
+                    <label for="rating3-4"></label>
+                    <input type="radio" name="rating3" value="5" id="rating3-5">
+                    <label for="rating3-5"></label>
+                  </div>
+                  <p>Especialista en equilibrio mental y físico.</p>
                 </div>
-                <div class="trainer-rating">
-                  <input type="radio" name="rating3" value="5" id="rating3-5">
-                  <label for="rating3-5"></label>
-                  <input type="radio" name="rating3" value="4" id="rating3-4">
-                  <label for="rating3-4"></label>
-                  <input type="radio" name="rating3" value="3" id="rating3-3">
-                  <label for="rating3-3"></label>
-                  <input type="radio" name="rating3" value="2" id="rating3-2">
-                  <label for="rating3-2"></label>
-                  <input type="radio" name="rating3" value="1" id="rating3-1">
-                  <label for="rating3-1"></label>
-                </div>
-                <p>Especialista en equilibrio mental y físico.</p>
               </div>
             </div>
           </div>
@@ -268,6 +265,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js" crossorigin="anonymous"
       referrerpolicy="no-referrer"></script>
     <script src="../js/darkmode.js"></script>
+    <script src="../js/trainers.js"></script>
   </body>
 
 </html>
